CA tech poster for fellow
CA tech poster for fellow

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6484,7 +6484,7 @@
 					<key>page50 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-11-06T19:20:48Z</date>
+						<date>2018-11-06T19:51:50Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6528,6 +6528,26 @@
 								</data>
 								<key>Size</key>
 								<integer>124861</integer>
+							</dict>
+							<key>files/stacks-image-009084f-926x1198.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Y6hZI4oQOZYf
+								9aR1T3P/Wg==
+								</data>
+								<key>Size</key>
+								<integer>1113244</integer>
+							</dict>
+							<key>files/stacks-image-009084f-926x1198@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								CBqHHwMn8cj3
+								HtqgvstSkw==
+								</data>
+								<key>Size</key>
+								<integer>3851696</integer>
 							</dict>
 							<key>files/stacks-image-580baf6-248x248.jpg</key>
 							<dict>
@@ -6583,11 +6603,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								cDrCiufl+4oC
-								FRYaQ0CvyQ==
+								tEPyOlPORbby
+								BVPy9wLM4A==
 								</data>
 								<key>Size</key>
-								<integer>163015</integer>
+								<integer>164189</integer>
 							</dict>
 							<key>files/stacks_page_page50.js</key>
 							<dict>
@@ -6603,11 +6623,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								fmsiDMtaDs6s
-								/VVye/sngQ==
+								F0OeAipKRPeZ
+								XixSaMq/OA==
 								</data>
 								<key>Size</key>
-								<integer>73352</integer>
+								<integer>74385</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9902,7 +9922,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-11-06T19:20:48Z</date>
+						<date>2018-11-06T19:51:50Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9951,11 +9971,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								hXBYP4vYHBjj
-								bboIsziLgw==
+								QpV1c2RhSoUa
+								VSa4WHpR4A==
 								</data>
 								<key>Size</key>
-								<integer>4380</integer>
+								<integer>4348</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10004,7 +10024,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-11-06T19:20:48Z</date>
+						<date>2018-11-06T19:51:50Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11043,11 +11063,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								X5yG48o2vcNf
-								6t1Vhwhq8Q==
+								g0U7vFpNhv9+
+								FnAoyWykOA==
 								</data>
 								<key>Size</key>
-								<integer>4067</integer>
+								<integer>3364</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11131,8 +11151,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcDJEIkV
-				CTmAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcDJFCzk
+				yj6AC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -11142,7 +11162,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcDJEIkVDJGA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcDJFCzkzPeA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
