added room blocks to NetSci
added room blocks to NetSci

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-29T19:08:58Z</date>
+						<date>2018-11-07T21:57:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -194,11 +194,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								kJRCbPAjoEZT
-								o/tqGVIm6w==
+								bXAwSLjliI5k
+								Ni7QnvB7tw==
 								</data>
 								<key>Size</key>
-								<integer>154585</integer>
+								<integer>164321</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -214,11 +214,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								vI2FdFGj1Kwu
-								TV2xmpQlNg==
+								Z8npKNGEpfND
+								oj2+oF0cSg==
 								</data>
 								<key>Size</key>
-								<integer>80601</integer>
+								<integer>87803</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
