--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6746,7 +6746,7 @@
 					<key>page52 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-29T19:08:58Z</date>
+						<date>2018-11-07T21:57:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6905,11 +6905,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								kJRCbPAjoEZT
-								o/tqGVIm6w==
+								bXAwSLjliI5k
+								Ni7QnvB7tw==
 								</data>
 								<key>Size</key>
-								<integer>154585</integer>
+								<integer>164321</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -6925,11 +6925,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								vI2FdFGj1Kwu
-								TV2xmpQlNg==
+								Z8npKNGEpfND
+								oj2+oF0cSg==
 								</data>
 								<key>Size</key>
-								<integer>80601</integer>
+								<integer>87803</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11151,8 +11151,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcDJFCzk
-				yj6AC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcDJy54f
+				2GKAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -11162,7 +11162,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcDJFCzkzPeA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcDJy54f3C+A
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
