added rates for NetSci dorms
added rates for NetSci dorms

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-11-07T21:57:13Z</date>
+						<date>2018-11-12T14:39:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -214,11 +214,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Z8npKNGEpfND
-								oj2+oF0cSg==
+								Si4d30Rn+Qfa
+								RjvV8a89jA==
 								</data>
 								<key>Size</key>
-								<integer>87803</integer>
+								<integer>87895</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
