soft launch of MM positions
soft launch of MM positions

--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/6-Fellowships/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/6-Fellowships/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-11-06T19:51:50Z</date>
+						<date>2018-11-19T23:02:28Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -152,11 +152,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								tEPyOlPORbby
-								BVPy9wLM4A==
+								kiUmncz78OHD
+								iy/axoIA0Q==
 								</data>
 								<key>Size</key>
-								<integer>164189</integer>
+								<integer>166637</integer>
 							</dict>
 							<key>files/stacks_page_page50.js</key>
 							<dict>
@@ -172,11 +172,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								F0OeAipKRPeZ
-								XixSaMq/OA==
+								9eN975onqpzn
+								cO6qudT56w==
 								</data>
 								<key>Size</key>
-								<integer>74385</integer>
+								<integer>84379</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
