--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6484,7 +6484,7 @@
 					<key>page50 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-11-06T19:51:50Z</date>
+						<date>2018-11-19T23:02:28Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6603,11 +6603,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								tEPyOlPORbby
-								BVPy9wLM4A==
+								kiUmncz78OHD
+								iy/axoIA0Q==
 								</data>
 								<key>Size</key>
-								<integer>164189</integer>
+								<integer>166637</integer>
 							</dict>
 							<key>files/stacks_page_page50.js</key>
 							<dict>
@@ -6623,11 +6623,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								F0OeAipKRPeZ
-								XixSaMq/OA==
+								9eN975onqpzn
+								cO6qudT56w==
 								</data>
 								<key>Size</key>
-								<integer>74385</integer>
+								<integer>84379</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8134,7 +8134,7 @@
 					<key>page6 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-11-06T19:14:32Z</date>
+						<date>2018-11-19T23:02:28Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8169,6 +8169,16 @@
 								<key>Size</key>
 								<integer>13322</integer>
 							</dict>
+							<key>files/stacks-image-850a43f-700x124.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								lyxiBhrhdGFD
+								Qx3fwJlO2A==
+								</data>
+								<key>Size</key>
+								<integer>20782</integer>
+							</dict>
 							<key>files/stacks-image-90966db-250x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -8183,11 +8193,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								39pK8fCYYCBC
-								ctCTI3W8nA==
+								sCmYv0wvG4gO
+								HKvm9ZZ/pg==
 								</data>
 								<key>Size</key>
-								<integer>109308</integer>
+								<integer>120418</integer>
 							</dict>
 							<key>files/stacks_page_page6.js</key>
 							<dict>
@@ -8203,11 +8213,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								VHQuxg3bDRZX
-								lEjXFqMRlQ==
+								P00kvau4SDfm
+								4ine42cLfw==
 								</data>
 								<key>Size</key>
-								<integer>44634</integer>
+								<integer>51118</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11031,7 +11041,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HAzlhGjI38gAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HA0bxFs/MwgAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -11042,7 +11052,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcDOWEaMkVOA
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcDRvEWz976A
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
