--- a/vermontcomplexsystems-foundation.rw/Pages/09-003Cheader003EPeople003C002Fheader003E/ChildPages/1-Open-positions/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/09-003Cheader003EPeople003C002Fheader003E/ChildPages/1-Open-positions/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-11-06T19:14:32Z</date>
+						<date>2018-11-19T23:02:28Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -70,6 +70,16 @@
 								<key>Size</key>
 								<integer>13322</integer>
 							</dict>
+							<key>files/stacks-image-850a43f-700x124.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								lyxiBhrhdGFD
+								Qx3fwJlO2A==
+								</data>
+								<key>Size</key>
+								<integer>20782</integer>
+							</dict>
 							<key>files/stacks-image-90966db-250x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -84,11 +94,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								39pK8fCYYCBC
-								ctCTI3W8nA==
+								sCmYv0wvG4gO
+								HKvm9ZZ/pg==
 								</data>
 								<key>Size</key>
-								<integer>109308</integer>
+								<integer>120418</integer>
 							</dict>
 							<key>files/stacks_page_page6.js</key>
 							<dict>
@@ -104,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								VHQuxg3bDRZX
-								lEjXFqMRlQ==
+								P00kvau4SDfm
+								4ine42cLfw==
 								</data>
 								<key>Size</key>
-								<integer>44634</integer>
+								<integer>51118</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
