added deadlines to reg page netsci
added deadlines to reg page netsci

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/2-NetSci-Registration/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/2-NetSci-Registration/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-10-29T19:08:58Z</date>
+						<date>2018-11-20T20:53:04Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -94,11 +94,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								j51ZN1Rn+W8o
-								SCGchLG9CQ==
+								8wn4CX4Y3+dD
+								9P3Ldx2cLQ==
 								</data>
 								<key>Size</key>
-								<integer>124931</integer>
+								<integer>127388</integer>
 							</dict>
 							<key>files/stacks_page_page54.js</key>
 							<dict>
@@ -114,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								BxMXSMVZObI7
-								fYgXSrOEVQ==
+								bY8NRK5mZTUi
+								YDR7N5LyvA==
 								</data>
 								<key>Size</key>
-								<integer>54462</integer>
+								<integer>56282</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
