--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -7652,7 +7652,7 @@
 					<key>page58 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-11-05T16:05:32Z</date>
+						<date>2018-11-20T21:30:49Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7737,6 +7737,16 @@
 								<key>Size</key>
 								<integer>43537</integer>
 							</dict>
+							<key>files/stacks-image-2aeee5b.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								We9pB8ka4Vmx
+								H5keC9AVbg==
+								</data>
+								<key>Size</key>
+								<integer>24736</integer>
+							</dict>
 							<key>files/stacks-image-506ca91.png</key>
 							<dict>
 								<key>Digest</key>
@@ -7786,6 +7796,16 @@
 								</data>
 								<key>Size</key>
 								<integer>45733</integer>
+							</dict>
+							<key>files/stacks-image-7841e09.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								N4PpCrmytr8z
+								lNWtcwKD6g==
+								</data>
+								<key>Size</key>
+								<integer>8443</integer>
 							</dict>
 							<key>files/stacks-image-7baace1.png</key>
 							<dict>
@@ -7891,31 +7911,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								UUTUp162ktk6
-								ZRAjGHFCnw==
+								PcXDOZypg1A0
+								T2Lqw7CkbA==
 								</data>
 								<key>Size</key>
-								<integer>179359</integer>
+								<integer>186027</integer>
 							</dict>
 							<key>files/stacks_page_page58.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								LzF4Vo2UArIS
-								/iPN9xolcA==
+								4XeQYGdz7UNI
+								wpkF2QCq5g==
 								</data>
 								<key>Size</key>
-								<integer>27481</integer>
+								<integer>27845</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								lAESzTIEIRIB
-								sy64ea5YjQ==
+								l/808ltrgkw4
+								OBSH0p8C+g==
 								</data>
 								<key>Size</key>
-								<integer>104421</integer>
+								<integer>111507</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11041,8 +11061,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcDSVdxt
-				feGAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcDSWke8
+				RHyAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -11052,7 +11072,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcDSVdxtgzCA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcDSWke8SHyA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
