--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/Contents.plist
@@ -18,9 +18,10 @@
 				<string>3-Masters-in-Complex-Systems-and-Data-Science</string>
 				<string>4-PhD-in-Complex-Systems-and-Data-Science</string>
 				<string>5-NIH-T32-in-Complexity-and-Neurobiology</string>
-				<string>6-Fellowships</string>
-				<string>7-Sample-lectures</string>
-				<string>8-All-courses</string>
+				<string>6-Mass-Mutual-Center-of-Excellence</string>
+				<string>7-Fellowships</string>
+				<string>8-Sample-lectures</string>
+				<string>9-All-courses</string>
 			</array>
 		</dict>
 	</array>
