NetSci Young Initiatives Edits
Changed 2018 to 2019

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -9842,7 +9842,7 @@
 					<key>page74 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-11-26T02:13:00Z</date>
+						<date>2018-11-26T02:20:47Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9911,11 +9911,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								cwh9YgX6rw7v
-								XZFdqPJngw==
+								KgDBoViA51VZ
+								NF0wopthlA==
 								</data>
 								<key>Size</key>
-								<integer>48086</integer>
+								<integer>48355</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10120,7 +10120,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-11-26T02:12:59Z</date>
+						<date>2018-11-26T02:20:47Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -10169,11 +10169,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								bMPdQ7XRI0jd
-								LXDad1K3vg==
+								y4r0MpL5wpOr
+								C5GJs90/xQ==
 								</data>
 								<key>Size</key>
-								<integer>5962</integer>
+								<integer>6026</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11369,8 +11369,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcDVxyEG
-				bR6AC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcDVyAHB
+				L16AC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -11380,7 +11380,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcDVxyEGaSeA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcDVyAHBLA6A
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
