--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/7-NetSci-Young-Initiative-for-Best-Talk-Pitch/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/7-NetSci-Young-Initiative-for-Best-Talk-Pitch/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-11-26T02:13:00Z</date>
+						<date>2018-11-26T02:20:47Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -104,11 +104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								cwh9YgX6rw7v
-								XZFdqPJngw==
+								KgDBoViA51VZ
+								NF0wopthlA==
 								</data>
 								<key>Size</key>
-								<integer>48086</integer>
+								<integer>48355</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
