--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/7-Fellowships/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/7-Fellowships/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-11-27T20:28:32Z</date>
+						<date>2018-12-03T14:32:14Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -172,11 +172,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								V7xjoiqQInkl
-								oSIZ8yqLbg==
+								QzUwlTI06kAK
+								r4wk6fcymw==
 								</data>
 								<key>Size</key>
-								<integer>86070</integer>
+								<integer>86065</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
