--- a/vermontcomplexsystems-foundation.rw/Pages/09-003Cheader003EPeople003C002Fheader003E/ChildPages/1-Open-positions/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/09-003Cheader003EPeople003C002Fheader003E/ChildPages/1-Open-positions/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-11-27T20:28:32Z</date>
+						<date>2018-12-03T14:32:14Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -114,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								nczNnHgQV85J
-								1QmGFE9oNA==
+								nC4RWxgIm3yK
+								gzEj5ekGoQ==
 								</data>
 								<key>Size</key>
-								<integer>52419</integer>
+								<integer>52405</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
