--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6952,7 +6952,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-03T14:57:48Z</date>
+						<date>2018-12-03T19:56:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7046,6 +7046,16 @@
 								</data>
 								<key>Size</key>
 								<integer>24736</integer>
+							</dict>
+							<key>files/stacks-image-391616f-500x500.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								zlRdT63pSYEq
+								jsF4lNV65A==
+								</data>
+								<key>Size</key>
+								<integer>558997</integer>
 							</dict>
 							<key>files/stacks-image-506ca91.png</key>
 							<dict>
@@ -7217,6 +7227,26 @@
 								<key>Size</key>
 								<integer>27178</integer>
 							</dict>
+							<key>files/stacks-image-cd43f5e-500x374.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Koa4QxEPEbS7
+								nPIAYMvT/A==
+								</data>
+								<key>Size</key>
+								<integer>47879</integer>
+							</dict>
+							<key>files/stacks-image-cd43f5e-500x374@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								MTfXORRF1KKv
+								J82ZhJk71g==
+								</data>
+								<key>Size</key>
+								<integer>146897</integer>
+							</dict>
 							<key>files/stacks-image-d2c4351-164x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -7247,35 +7277,45 @@
 								<key>Size</key>
 								<integer>22811</integer>
 							</dict>
+							<key>files/stacks-image-fa235ce-400x498.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								JA4lnRqpCKjA
+								ZxX7/bFuIw==
+								</data>
+								<key>Size</key>
+								<integer>61114</integer>
+							</dict>
 							<key>files/stacks_page_page53.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZU4ZAnrI5wrq
-								fxk8C/htcQ==
+								qVzlwqo7m3Ne
+								QCKatyZc1w==
 								</data>
 								<key>Size</key>
-								<integer>203767</integer>
+								<integer>212008</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								iD/dcrX06N0x
-								CcjkPbbxVA==
+								js81c+fR0Nps
+								19dHq0jYFA==
 								</data>
 								<key>Size</key>
-								<integer>28027</integer>
+								<integer>28573</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								93euZTeR1aPM
-								VdysUtWGtQ==
+								TGQ7rCkjTngk
+								Y7PUwCw2dQ==
 								</data>
 								<key>Size</key>
-								<integer>132362</integer>
+								<integer>143368</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7692,7 +7732,7 @@
 					<key>page58 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-03T14:57:48Z</date>
+						<date>2018-12-03T19:56:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7786,6 +7826,16 @@
 								</data>
 								<key>Size</key>
 								<integer>24736</integer>
+							</dict>
+							<key>files/stacks-image-391616f-500x500.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								zlRdT63pSYEq
+								jsF4lNV65A==
+								</data>
+								<key>Size</key>
+								<integer>558997</integer>
 							</dict>
 							<key>files/stacks-image-506ca91.png</key>
 							<dict>
@@ -7937,6 +7987,26 @@
 								<key>Size</key>
 								<integer>27178</integer>
 							</dict>
+							<key>files/stacks-image-cd43f5e-500x374.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Koa4QxEPEbS7
+								nPIAYMvT/A==
+								</data>
+								<key>Size</key>
+								<integer>47879</integer>
+							</dict>
+							<key>files/stacks-image-cd43f5e-500x374@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								MTfXORRF1KKv
+								J82ZhJk71g==
+								</data>
+								<key>Size</key>
+								<integer>146897</integer>
+							</dict>
 							<key>files/stacks-image-f14500c-500x500.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -7957,35 +8027,45 @@
 								<key>Size</key>
 								<integer>22811</integer>
 							</dict>
+							<key>files/stacks-image-fa235ce-400x498.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								JA4lnRqpCKjA
+								ZxX7/bFuIw==
+								</data>
+								<key>Size</key>
+								<integer>61114</integer>
+							</dict>
 							<key>files/stacks_page_page58.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								uJ068i+h9XE3
-								wYb6V4pKaA==
+								ZlnnZg8QjYaT
+								Nrua6uOYjw==
 								</data>
 								<key>Size</key>
-								<integer>189998</integer>
+								<integer>198239</integer>
 							</dict>
 							<key>files/stacks_page_page58.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								R/c1pITvPyyA
-								KDfbnFQRuQ==
+								GvVcMXvQTsey
+								r/2xg3v3+w==
 								</data>
 								<key>Size</key>
-								<integer>28027</integer>
+								<integer>28573</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								2igdxAxA0Gc2
-								3QonqvNtLw==
+								3/4c2e/MBZcS
+								uubp1m3ZrA==
 								</data>
 								<key>Size</key>
-								<integer>116338</integer>
+								<integer>127344</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11499,7 +11579,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HA2r7GLF+FgAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HA2uD9TfNBgAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -11510,7 +11590,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcDavsYsYpmA
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcDa4P1N+YOA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
