--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-12-03T14:57:48Z</date>
+						<date>2018-12-03T19:56:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -129,6 +129,16 @@
 								</data>
 								<key>Size</key>
 								<integer>24736</integer>
+							</dict>
+							<key>files/stacks-image-391616f-500x500.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								zlRdT63pSYEq
+								jsF4lNV65A==
+								</data>
+								<key>Size</key>
+								<integer>558997</integer>
 							</dict>
 							<key>files/stacks-image-506ca91.png</key>
 							<dict>
@@ -280,6 +290,26 @@
 								<key>Size</key>
 								<integer>27178</integer>
 							</dict>
+							<key>files/stacks-image-cd43f5e-500x374.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Koa4QxEPEbS7
+								nPIAYMvT/A==
+								</data>
+								<key>Size</key>
+								<integer>47879</integer>
+							</dict>
+							<key>files/stacks-image-cd43f5e-500x374@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								MTfXORRF1KKv
+								J82ZhJk71g==
+								</data>
+								<key>Size</key>
+								<integer>146897</integer>
+							</dict>
 							<key>files/stacks-image-f14500c-500x500.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -300,35 +330,45 @@
 								<key>Size</key>
 								<integer>22811</integer>
 							</dict>
+							<key>files/stacks-image-fa235ce-400x498.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								JA4lnRqpCKjA
+								ZxX7/bFuIw==
+								</data>
+								<key>Size</key>
+								<integer>61114</integer>
+							</dict>
 							<key>files/stacks_page_page58.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								uJ068i+h9XE3
-								wYb6V4pKaA==
+								ZlnnZg8QjYaT
+								Nrua6uOYjw==
 								</data>
 								<key>Size</key>
-								<integer>189998</integer>
+								<integer>198239</integer>
 							</dict>
 							<key>files/stacks_page_page58.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								R/c1pITvPyyA
-								KDfbnFQRuQ==
+								GvVcMXvQTsey
+								r/2xg3v3+w==
 								</data>
 								<key>Size</key>
-								<integer>28027</integer>
+								<integer>28573</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								2igdxAxA0Gc2
-								3QonqvNtLw==
+								3/4c2e/MBZcS
+								uubp1m3ZrA==
 								</data>
 								<key>Size</key>
-								<integer>116338</integer>
+								<integer>127344</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
